// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<a
  className="sc-ifAKCX coJgDe k-SimpleCard"
  href="#"
>
  <div
    className="k-SimpleCard__imageContainer"
    style={
      Object {
        "--SimpleCard-image-container-background": "#eee",
        "--SimpleCard-image-container-ratio": null,
      }
    }
  >
    <img
      alt=""
      className="k-SimpleCard__image"
      src=""
    />
  </div>
</a>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<a
  className="sc-ifAKCX coJgDe k-SimpleCard"
  href="#"
>
  <div
    className="k-SimpleCard__imageContainer k-SimpleCard__imageContainer--ratio"
    style={
      Object {
        "--SimpleCard-image-container-background": "#eee",
        "--SimpleCard-image-container-ratio": 1.7777777777777777,
      }
    }
  >
    <img
      alt=""
      className="k-SimpleCard__image"
      src=""
    />
  </div>
</a>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<a
  className="sc-ifAKCX coJgDe k-SimpleCard"
  href="#"
>
  <div
    className="k-SimpleCard__imageContainer"
    style={
      Object {
        "--SimpleCard-image-container-background": "#eee",
        "--SimpleCard-image-container-ratio": null,
      }
    }
  >
    <div
      className="k-SimpleCard__playerButton"
      style={
        Object {
          "--SimpleCard-player-button-size": "4.375rem",
        }
      }
    >
      <span
        className="sc-bdVaJa bDWFJH k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="k-SimpleCard__image"
      src=""
    />
  </div>
</a>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<a
  className="sc-ifAKCX coJgDe k-SimpleCard"
  href="#"
>
  <div
    className="k-SimpleCard__imageContainer"
    style={
      Object {
        "--SimpleCard-image-container-background": "#eee",
        "--SimpleCard-image-container-ratio": null,
      }
    }
  >
    <img
      alt=""
      className="k-SimpleCard__image"
      src=""
    />
  </div>
</a>
`;
